src/components/Profile/Profile.css
.profile {
  display: flex;
  justify-content: space-between;
  align-items: flex-start;
  min-height: 60px;
  padding: 0 20px;
  position: relative;
}

/* .profile__name-avatar {
  display: flexbox;
  flex-direction: row;
} */

.profile__sidebar {
  display: flex;
  flex-direction: row;
  gap: 20px;
  align-items: center;
  height: 40px;
}

.profile__add-clothes {
  font-size: 20px;
  line-height: 24px;
  font-weight: 700;
  display: flexbox;
}

.profile__new-clothes {
  font-size: 20px;
  line-height: 24px;
  font-weight: 700;
  display: flexbox;
}

.profile__avatar-logo {
  display: flexbox;
  gap: 20px;
  align-items: center;
  height: 56px;
  width: 56px;
}

.profile__name-person {
  font-size: 20px;
  line-height: 24px;
  font-weight: 700;
  margin-right: 68px;
  width: max-content;
}

.profile__items {
  display: flex;
  left: 20px;
}

.profile__clothes-section {
  margin-top: 20px;
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  justify-content: center;
  position: relative;
  margin-right: 80px;
}

.profile__add-button {
  background-color: initial;
  border: none;
  color: rgba(0, 0, 0, 0.6);
  font-size: 20px;
  font-weight: 700;
  line-height: 25px;
  margin-left: 20px;
  margin-right: 20px;
}

.profile__add-new {
  display: flex;
  align-items: center;
  margin-left: 100px;
}
.sidebar__profile-data {
  margin: 0 0 8px 0;
  width: 190px;
  cursor: pointer;
}

.sidebar__profile-data:hover {
  opacity: 0.5;
}

.sidebar__logout {
  margin: 0;
  font-size: 20px;
  line-height: 24px;
  font-weight: 700;
  cursor: pointer;
  top: 100px;
  position: absolute;
  /* display: flexbox; */
}
.sidebar__logout:hover {
  opacity: 0.5;
}

